Fix: ellipsis the overflowed text of a tag

--- a/extension/public/popup.css
+++ b/extension/public/popup.css
@@ -233,6 +233,7 @@ header {
   padding: 0 12px 0 12px;
 
   height: 24px;
+  max-width: 148px;
 
   text-align: center;
   color: white;
@@ -241,12 +242,14 @@ header {
 
   border-radius: 12px;
   background-color: #c54ccf;
+
 }
 
 .keywords .tag-list .tag-results-item {
   padding: 0 12px 0 12px;
 
   height: 20px;
+  max-width: 148px;
 
   text-align: center;
   color: #c54ccf;
@@ -256,6 +259,15 @@ header {
   border-radius: 12px;
   border: 2px solid #c54ccf;
   background-color: rgba(255, 255, 255, 0);
+}
+
+/* Tag Item's Text */
+.keywords .tag-list .tag-item .tagText{
+    max-width: 148px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
 }
 
 .keywords .manage-tag-list-btn {
